--- a/android/gradle/dependencies.gradle
+++ b/android/gradle/dependencies.gradle
@@ -11,6 +11,8 @@ ext {
 
             // logging
             timber   : "4.7.1",
+
+            moshi              : "1.8.0"
     ]
 
     testVersions = [
