--- a/android/core/build.gradle
+++ b/android/core/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "29.0.0"
+    buildToolsVersion '28.0.3'
 
 
     defaultConfig {
