--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,11 +6,13 @@ target 'CBCore' do
   pod 'RxSwift', '~> 4.4.0'
   pod 'SwiftLint'
   pod 'SwiftFormat/CLI', '0.37.2'
-  pod 'BigInt',  '~> 3.1.0'
+  pod 'BigInt', '~> 3.1.0'
 
   target 'CBCoreTests' do
     inherit! :search_paths
     pod 'RxBlocking', '~> 4.3.1'
+    pod 'BigInt', '~> 3.1.0'
+    pod 'RxSwift', '~> 4.4.0'
   end
 
 end
