--- a/android/core/build.gradle
+++ b/android/core/build.gradle
@@ -2,6 +2,7 @@ apply from: '../gradle/dependencies.gradle'
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -11,6 +12,8 @@ android {
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 28
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 }
 
