--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,30 @@ android/**/local.properties
 android/**/*.log
 
 # IDE Files
+.idea/
 android/**/.idea/
 android/**/*.iml
 android/**/.gradle
 android/**/.project
 android/**/.settings
 android/**/.classpath
+
+# Xcode
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+*.xcscmblueprint
+*.gcno
+*.gcda
